<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CurrencyConverterFragment">

    <TextView
        android:id="@+id/converterRubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/converter_rub_txt"
        android:paddingTop="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"/>

    <EditText
        android:id="@+id/converterEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/converter_hint_txt"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="7dp"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/converterRubText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/arrow_right"
        android:paddingTop="13dp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="@id/guideline"/>

    <TextView
        android:id="@+id/converterCurText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:text="@string/converter_cur_choose_txt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"/>

    <Spinner
        android:id="@+id/converterSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_marginHorizontal="3dp"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/converterCurText" />

    <Button
        android:id="@+id/converterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/converter_btn_txt"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/converterEditText"/>

    <TextView
        android:id="@+id/converterResultText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/converter_result_txt"
        android:textSize="28sp"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/converterButton"/>

    <TextView
        android:id="@+id/converterResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="1000"
        android:gravity="start"
        android:textSize="28sp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/converterButton"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>


</androidx.constraintlayout.widget.ConstraintLayout>